# ocl

./: .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  LICENSE  LICENSE-MIT  README.md  RELEASES.md  aliases.js  build.rs  cl_d3d10_h.rs  cl_d3d11_h.rs  cl_egl_h.rs  cl_gl_h.rs  diff  functions.rs  mod.rs  platform_h.rs  rustfmt.toml  search-index.js  stdout
cl-sys/: COPYRIGHT  Cargo.toml  README.md  build.rs
cl-sys/src/: cl_d3d10_h.rs  cl_d3d11_h.rs  cl_dx9_media_sharing_h.rs  cl_egl_h.rs  cl_gl_ext_h.rs  cl_gl_h.rs  cl_h.rs  glcorearb_h.rs  lib.rs  platform_h.rs
examples/gl_interop/: Cargo.toml
examples/images/: Cargo.toml
examples/images-safe-clamp/: Cargo.toml
examples/opencl_2_1/: Cargo.toml
ocl/: BufferCmdError.t.html  Cargo.toml  EventList.t.html  Extensions.t.html  FutureReadGuard.t.html  OclCoreError.t.html  ProQue.t.html  README.md  RwVec.t.html  all.html  enum.BufferCmdError.html  enum.SpatialDims.html  index.html  sidebar-items.js  struct.Buffer.html  struct.Context.html  struct.Device.html  struct.Event.html  struct.EventArray.html  struct.EventList.html  struct.Extensions.html  struct.FutureMemMap.html  struct.Image.html  struct.Kernel.html  struct.MemMap.html  struct.OclCoreError.html  struct.Platform.html  struct.ProQue.html  struct.Program.html  struct.Queue.html  struct.ReadGuard.html  struct.RwVec.html  struct.Sampler.html  struct.WriteGuard.html  type.FutureReadGuard.html  type.FutureWriteGuard.html
ocl-core/: Cargo.toml  README.md  build.rs
ocl-core/examples/: info_core.rs  trivial.rs  version.rs
ocl-core/ocl-core-vector/: Cargo.toml  README.md
ocl-core/src/: error.rs  extension_functions.rs  fail.rs  functions.rs  lib.rs  util.rs
ocl-extras/: Cargo.toml
ocl-extras/src/: command_graph.rs  lib.rs  sub_buffer_pool.rs  sub_buffer_pool_v2.rs
ocl-interop/: Cargo.toml  README.md  build.rs
ocl-interop/src/: lib.rs
ocl-interop/tests/: kernels.cl  lib.rs  vertex.glsl
ocl/async/: BufferSink.t.html  BufferSinkInner.t.html  BufferStream.t.html  BufferStreamInner.t.html  FutureFlood.t.html  FutureFlush.t.html  FutureMemMap.t.html  OrderLock.t.html  ReadGuard.t.html  WriteGuard.t.html  index.html  sidebar-items.js  struct.BufferSink.html  struct.BufferSinkInner.html  struct.BufferStream.html  struct.BufferStreamInner.html  struct.FutureFlood.html  struct.FutureFlush.html  struct.FutureGuard.html  struct.FutureMemMap.html  struct.MemMap.html  struct.OrderLock.html  struct.ReadGuard.html  struct.RwVec.html  struct.WriteGuard.html  trait.OrderGuard.html  type.FutureReadGuard.html  type.FutureWriteGuard.html
ocl/builders/: BufferBuilder.t.html  BufferReadCmd.t.html  BuildOpt.t.html  ClNullEventPtrEnum.t.html  ClWaitListPtrEnum.t.html  ContextProperties.t.html  DeviceSpecifier.t.html  ImageCmdKind.t.html  KernelBuilder.t.html  KernelCmd.t.html  ProQueBuilder.t.html  enum.BufferCmdDataShape.html  enum.BufferCmdKind.html  enum.BuildOpt.html  enum.ClNullEventPtrEnum.html  enum.ClWaitListPtrEnum.html  enum.DeviceSpecifier.html  enum.ImageCmdKind.html  index.html  sidebar-items.js  struct.BufferBuilder.html  struct.BufferCmd.html  struct.BufferMapCmd.html  struct.BufferReadCmd.html  struct.BufferWriteCmd.html  struct.ContextBuilder.html  struct.ContextProperties.html  struct.ImageBuilder.html  struct.ImageCmd.html  struct.ImageDescriptor.html  struct.ImageFormat.html  struct.KernelBuilder.html  struct.KernelCmd.html  struct.ProQueBuilder.html  struct.ProgramBuilder.html
ocl/enums/: ArgVal.t.html  BufferCmdKind.t.html  Cbool.t.html  CommandExecutionStatus.t.html  CommandQueueInfo.t.html  CommandType.t.html  ContextInfo.t.html  DeviceLocalMemType.t.html  DeviceMemCacheType.t.html  EventInfoResult.t.html  ImageChannelOrder.t.html  ImageInfo.t.html  ImageInfoResult.t.html  KernelArgInfo.t.html  KernelArgInfoResult.t.html  KernelInfo.t.html  KernelWorkGroupInfoResult.t.html  MemInfo.t.html  MemObjectType.t.html  PlatformInfoResult.t.html  ProfilingInfoResult.t.html  ProgramBuildInfo.t.html  ProgramBuildInfoResult.t.html  ProgramBuildStatus.t.html  SamplerInfo.t.html  SamplerInfoResult.t.html  enum.AddressingMode.html  enum.BufferCmdDataShape.html  enum.BufferCmdKind.html  enum.BufferCreateType.html  enum.Cbool.html  enum.ChannelType.html  enum.CommandExecutionStatus.html  enum.CommandQueueInfo.html  enum.CommandQueueInfoResult.html  enum.CommandType.html  enum.ContextInfo.html  enum.ContextInfoOrPropertiesPointerType.html  enum.ContextInfoResult.html  enum.ContextProperty.html  (+41 more)
ocl/error/: enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html  type.Result.html
ocl/examples/: async_cycles.rs  async_menagerie.rs  async_process.rs  basics.rs  buffer_sink.rs  device_check.rs  event_callbacks.rs  img_formats.rs  info.rs  info_core.rs  runall.bat  runall.sh  threads.rs  timed.rs  trivial.rs
ocl/flags/: CommandQueueProperties.t.html  DEVICE_AFFINITY_DOMAIN_L1_CACHE.v.html  DEVICE_AFFINITY_DOMAIN_L2_CACHE.v.html  DEVICE_AFFINITY_DOMAIN_L4_CACHE.v.html  DEVICE_TYPE_ACCELERATOR.v.html  DEVICE_TYPE_ALL.v.html  DEVICE_TYPE_CPU.v.html  DEVICE_TYPE_CUSTOM.v.html  DeviceExecCapabilities.t.html  DeviceFpConfig.t.html  EXEC_KERNEL.v.html  EXEC_NATIVE_KERNEL.v.html  FP_CORRECTLY_ROUNDED_DIVIDE_SQRT.v.html  FP_DENORM.v.html  FP_ROUND_TO_INF.v.html  FP_ROUND_TO_NEAREST.v.html  FP_ROUND_TO_ZERO.v.html  FP_SOFT_FLOAT.v.html  KERNEL_ARG_TYPE_NONE.v.html  KERNEL_ARG_TYPE_VOLATILE.v.html  MAP_READ.v.html  MAP_WRITE.v.html  MAP_WRITE_INVALIDATE_REGION.v.html  MEM_COPY_HOST_PTR.v.html  MEM_HOST_NO_ACCESS.v.html  MEM_HOST_READ_ONLY.v.html  MEM_READ_WRITE.v.html  MEM_USE_HOST_PTR.v.html  MEM_WRITE_ONLY.v.html  MIGRATE_MEM_OBJECT_CONTENT_UNDEFINED.v.html  MIGRATE_MEM_OBJECT_HOST.v.html  MemFlags.t.html  PROGRAM_BINARY_TYPE_COMPILED_OBJECT.v.html  PROGRAM_BINARY_TYPE_LIBRARY.v.html  QUEUE_PROFILING_ENABLE.v.html  constant.DEVICE_AFFINITY_DOMAIN_L1_CACHE.html  constant.DEVICE_AFFINITY_DOMAIN_L2_CACHE.html  constant.DEVICE_AFFINITY_DOMAIN_L3_CACHE.html  constant.DEVICE_AFFINITY_DOMAIN_L4_CACHE.html  (+54 more)
ocl/src/: error.rs  (+1 more)
opencl_core/: Cargo.toml
opencl_sys/: Cargo.toml
(+6105 files in other folders)
