[package]
name = "ocl-interop"
version = "0.1.2"
authors = ["Nopey Nope<golgothasTerror101@gmail.com>"]
build="build.rs"
repository = "https://github.com/Nopey/rust-ocl-gl"
description = "Aids in the creation of an OpenCL Context with OpenGL Interop enabled"
readme = "README.md"
keywords=["OpenCL","OpenGL","context","CL","GL"]
categories=["concurrency","hardware-support","api-bindings","external-ffi-bindings"]
license="WTFPL"

[dependencies]
ocl={ path ="../ocl/ocl"}

#for tests
[dev-dependencies]
gl="*"
glium="*"
sdl2="*"
glfw="*"

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "^0.2"

[target.'cfg(not(target_os="macos"))'.build-dependencies]
gl_generator = "^0.5"
