[package]
name = "cl-sys"
version = "0.4.2"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
description = "OpenCL FFI bindings."
documentation = "https://docs.rs/cl-sys/"
homepage = "https://github.com/cogciprocate/ocl/tree/master/cl-sys"
repository = "https://github.com/cogciprocate/ocl/tree/master/cl-sys"
readme = "README.md"
keywords = ["opencl", "gpu", "gpgpu"]
license = "MIT OR Apache-2.0"
exclude = ["target/*", "bak/*"]
build = "build.rs"
categories = ["api-bindings", "external-ffi-bindings", "asynchronous", "science"]
edition = "2018"

[features]
# Specifies the OpenCL version supported by the library being used. Generally,
# OpenCL v2.0+ support is still sparse.
opencl_version_1_1 = []
opencl_version_1_2 = []
opencl_version_2_0 = []
opencl_version_2_1 = []
opencl_version_2_2 = []
opencl_vendor_mesa = []

# `opencl_version_1_1` is unused, disabling it has no effect.
default = ["opencl_version_1_1", "opencl_version_1_2"]

[dependencies]
libc = "0.2"
