[package]
name = "ocl-core"
version = "0.6.1"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
description = "A low-level OpenCL API."
documentation = "https://docs.rs/ocl-core/"
homepage = "https://github.com/cogciprocate/ocl/tree/master/ocl-core"
repository = "https://github.com/cogciprocate/ocl/tree/master/ocl-core"
readme = "README.md"
keywords = ["opencl", "gpu", "gpgpu"]
license = "MIT/Apache-2.0"
exclude = ["target/*", "bak/*"]
categories = ["asynchronous", "concurrency", "science", "api-bindings"]

[features]
opencl_version_1_1 = ["cl-sys/opencl_version_1_1"]
opencl_version_1_2 = ["cl-sys/opencl_version_1_2"]
opencl_version_2_0 = ["cl-sys/opencl_version_2_0"]
opencl_version_2_1 = ["cl-sys/opencl_version_2_1"]
opencl_vendor_mesa = ["cl-sys/opencl_vendor_mesa"]

default = ["ocl-core-vector", "rand", "opencl_version_1_1", "opencl_version_1_2"]

[dependencies]
cl-sys = { version = "~0.4.0", path = "../cl-sys" }
num = "0.1"
libc = "0.2"
enum_primitive = "0.1"
bitflags = "1"

# Used for generating buffers full of random data:
rand = { version = "0.3", optional = true }

# Implements all of the vector types and traits.
ocl-core-vector = { version = "0.1", path = "ocl-core-vector", optional = true }

[dev-dependencies]
colorify = "0.2"

[build-dependencies]
rustc_version = "0.1"
