[package]
name = "ocl-extras"
version = "0.1.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cogciprocate/ocl"
homepage = "https://github.com/cogciprocate/ocl/ocl-extras"
documentation = "https://docs.rs/ocl-extras"
description = """ 
Types used in examples and tests within the ocl library but that may be useful
for others to use within their own projects.
"""

[dependencies.ocl]
path = ".."
# git = "https://github.com/cogciprocate/ocl"
version = "0.12"
# version = "*"
# default-features = false
# features = ["async_block"]

[dependencies]
# lazy_static = "0.2"
# libc = "0.2"
# colorify = "0.2"
# futures = "0.1"
# futures-cpupool = "0.1"
# tokio-core = "0.1"
# tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
# rand = "0.3"
chrono = "0.2"
# crossbeam = "0.2.1"
