[package]
name = "ocl-extras"
version = "0.1.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cogciprocate/ocl"
homepage = "https://github.com/cogciprocate/ocl/ocl-extras"
documentation = "https://docs.rs/ocl-extras"
description = """
Types used in examples and tests within the ocl library but that may be useful
for others to use within their own projects.
"""

[dependencies.ocl]
path = ".."
# git = "https://github.com/cogciprocate/ocl"
version = "0.13"
# default-features = false
# features = ["opencl_version_1_1", "opencl_version_1_2"]

[dependencies]
chrono = "0.2"
