[package]
name = "ocl-interop"

# [REMINDER]: Bump version in `README.md`.
version = "0.1.5"

authors = ["Nopey Nope<golgothasTerror101@gmail.com>", "Nick Sanders <cogciprocate@gmail.com>"]
build = "build.rs"
repository = "https://github.com/cogciprocate/ocl/"
description = "Creates an OpenCL Context with OpenGL Interop enabled"
readme = "README.md"
keywords = ["OpenCL", "OpenGL", "gpgpu", "gpu", "GL"]
categories = ["concurrency", "hardware-support", "api-bindings", "external-ffi-bindings"]
license = "MIT/Apache-2.0"

[dependencies]
ocl = { path = "../ocl", version = "0.19" }

# For tests
[dev-dependencies]
gl = "0.14"
# Red test
sdl2 = "0.35"
# Green test
glutin = "0.29"
# Blue test
glfw = "0.45"

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "^0.3"

[build-dependencies]
gl_generator = "^0.14"
