[package]
name = "test_ocl"
version = "0.1.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]

[dependencies]
glium = "0.14"

# Try with this:
# glx = "0.1.2"


[dependencies.ocl]
path = "/home/nick/projects/ocl"

[replace]
"cl-sys:0.1.0" = { git = 'https://github.com/cogciprocate/cl-sys' }
"ocl-core:0.1.0" = { git = "https://github.com/cogciprocate/ocl-core" }