[package]
name = "gl_interop_test"
version = "0.1.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]

[dependencies]
glium = "0.14"

# Try with this:
# glx = "0.1.2"

[dependencies.ocl]
ocl = { path = "../../" }

[replace]
"cl-sys:0.1.0" = { git = 'https://github.com/cogciprocate/cl-sys' }
"ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core" }
