[package]
name = "ocl-example-rgb2gray"
version = "0.0.2"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]

[dependencies]
ocl = { path = "../../" }
image = "*"
time = "*"
find_folder = "*"
colorify = "*"

[replace]
"ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core", branch = "futures" }
