[package]
name = "ocl-extras"
version = "0.1.1"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cogciprocate/ocl"
homepage = "https://github.com/cogciprocate/ocl/ocl-extras"
documentation = "https://docs.rs/ocl-extras"
description = """
Types used in examples and tests within the ocl library but that may be useful
for others to use within their own projects.
"""

[dependencies.ocl]
path = ".."
# git = "https://github.com/cogciprocate/ocl"
version = "0.19"
# default-features = false
# features = ["opencl_version_1_1", "opencl_version_1_2"]

[dependencies]
# chrono = "0.2"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
failure = "0.1"


[dependencies.futures-preview]
version = "0.2.2"
# git = "https://github.com/rust-lang-nursery/futures-rs"
# branch = "master"
# path = "../futures-rs/futures"
# version = "0.3.0-alpha.1"



