[package]
name = "images"
version = "0.2.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]

[features]
opencl_vendor_mesa = ["ocl/opencl_vendor_mesa"]

[dependencies]
colorify = "*"
image = "*"
ocl = { path = "../../" }
# ocl = { git = "https://github.com/cogciprocate/ocl" }
# ocl-core = "0.3"
# ocl-core = { git = "https://github.com/cogciprocate/ocl-core" }
# cl-sys = { git = "https://github.com/cogciprocate/cl-sys" }


# [replace]
# "cl-sys:0.2.1" = { git = "https://github.com/cogciprocate/cl-sys" }
# "ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core", branch = "futures" }
