[package]
name = "ocl-example-rgb2gray"
version = "0.2.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>", "Nick Sanders <cogciprocate@gmail.com>"]

[features]
opencl_vendor_mesa = ["ocl/opencl_vendor_mesa"]

[dependencies]
ocl = { path = "../../" }
image = "*"
time = "0.3"
find_folder = "*"
colorify = "*"

# [replace]
# "ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core", branch = "futures" }
