[package]
name = "ocl-proto"
version = "0.0.1"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
description = "Protype examples."
# documentation = "http://doc.cogciprocate.com/ocl/ocl/index.html"
# homepage = "https://github.com/cogciprocate/ocl"
# repository = "https://github.com/cogciprocate/ocl"
# readme = "README.md"
# keywords = ["opencl", "gpu", "gpgpu"]
# license = "MIT/Apache-2.0"
exclude = ["target/*", "*.png", "bak/*"]
# categories = ["asynchronous", "concurrency", "science"]

[dependencies.ocl]
# version = "0.12"
path = "../.."
# default-features = true
# features = ["async_block"]

[dependencies]
# ocl-core = "0.3"
# ocl-core = { version = "0.3.2", git = "https://github.com/cogciprocate/ocl-core" }
# ocl-core = { version = "0.3.2", path = "/home/nick/src/github.com/cogciprocate/ocl-core" }
# num = "0.1"
# libc = "0.2"
# enum_primitive = "0.1"
# bitflags = "0.8"

# find_folder = "0.3"
colorify = "0.2"
# time = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
chrono = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
# tokio-core = "0.1"
# tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
# lazy_static = "0.2"
# ocl-extras = { version = "0.1", path = "../../ocl-extras" }

# [replace]
# # "cl-sys:0.2.1" = { git = "https://github.com/cogciprocate/cl-sys" }
# # "ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core" }
# # "ocl-core:0.3.2" = { path = "/home/nick/src/github.com/cogciprocate/ocl-core" }
# "ocl-core:0.3.2" = { path = "../ocl-core" }
